--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -184,19 +184,8 @@ nav:hover {
 }
 .imagem_exibição_nav:hover {
   scale: 105%;
-
   box-shadow: 0px 0px 5px rgb(255, 255, 255);
   filter: opacity(100%) grayscale(0%);
-  .escrita_exibição_imagem_nav h1 {
-    filter: brightness(150%);
-    text-decoration: underline;
-    background-color: rgba(0, 0, 0, 0.5);
-    filter: grayscale(0%);
-  }
-  .escrita_exibição_imagem_nav p {
-    background-color: rgb(19, 19, 19);
-    filter: grayscale(0%);
-  }
 }
 .escrita_exibição_imagem_nav {
   text-shadow: 0px 0px 10px black;
@@ -222,14 +211,15 @@ p {
 }
 
 main {
-  top: 10%;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   position: absolute;
-  width: 99%;
+  width: 100%;
   height: 100vh;
   color: white;
-  border-radius: 25px;
-  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
+ 
 }
 main > h1 {
   margin: 10px 0px 0px 0px;
