--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -6,6 +6,9 @@
 @font-face {
   font-family: "luckiest";
   src: url(../fontes/LuckiestGuy-Regular.ttf);
+  font-variant: small-caps;
+  font-weight: bolder;
+  
 }
 * {
   scroll-behavior: smooth;
@@ -219,7 +222,6 @@ main {
   width: 100%;
   height: 100vh;
   color: white;
- 
 }
 main > h1 {
   margin: 10px 0px 0px 0px;
@@ -243,8 +245,8 @@ main > h2 {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.76);
   position: fixed;
-  right: 10px;
-  bottom: 35px;
+  right: 1.5%;
+  bottom: 5%;
   width: 70px;
   box-shadow: 0px 0px 2px black;
 }
@@ -256,6 +258,73 @@ main > h2 {
   transition-duration: 0.7s;
   transition-timing-function: ease;
   transition-property: scale, box-shadow;
+}
+#img-botão-suporte {
+  border-radius: 50%;
+  background-color: rgb(160, 162, 243);
+  position: fixed;
+  left: 1.5%;
+  bottom: 5%;
+  width: 70px;
+  box-shadow: 0px 0px 2px black;
+}
+#img-botão-suporte:hover {
+  cursor: pointer;
+  scale: 101%;
+  background-color: rgb(188, 189, 253);
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  transition-duration: 0.7s;
+  transition-timing-function: ease;
+  transition-property: scale, box-shadow;
+}
+#Caixa_suporte {
+  position: fixed;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.993);
+  bottom: 14%;
+  width: 20%;
+  height: 60%;
+  border-radius: 30px;
+  letter-spacing: 1px;
+  font-family: "luckiest", Arial, Helvetica, sans-serif; 
+  
+}
+#caixa_suporte > h1 {
+  display: inline;
+  top: 1%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  
+}
+
+#container_botoes_suporte { 
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 15%;
+
+}
+#container_botoes_suporte > button { 
+  width: 50%;
+  border-radius: 20px;
+  box-shadow: 0px 2px 2px black;
+}
+#container_mensagens { 
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid black;
+  border-radius: 20px;
+  box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.3);
+  width: 80%;
+  height: 60%;
 }
 footer {
   background-image: linear-gradient(
@@ -352,12 +421,15 @@ input[type="button"]:hover {
   position: absolute;
   right: 0%;
 }
-#caixa_login > label > img {
-  cursor: pointer;
+.botaofechar {
+  top: 0%;
+  right: 0%; 
+  position: absolute; 
   width: 64px;
+  cursor: pointer;
   height: 64px;
 }
-#caixa_login > label > img:hover {
+.botaofechar:hover {
   filter: brightness(110%);
   scale: 102%;
   transition-duration: 0.3s;
