--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -111,7 +111,7 @@ header > a > img {
   transition-duration: 0.2s;
   transition-timing-function: ease;
 }
-#container_orçamento { 
+#container_orçamento {
   position: relative;
   z-index: 0;
   top: 53.5%;
@@ -121,17 +121,14 @@ header > a > img {
   width: 90%;
   height: 80%;
   box-shadow: inset 0px 0px 8px rgba(119, 0, 255, 0.9);
- 
 }
 
-#header_conteudo_usuario {  
-  background-color: rgb(154, 0, 243);;
+#header_conteudo_usuario {
+  background-color: rgb(154, 0, 243);
   width: 100%;
   height: 10%;
-  
-
 }
-#header_conteudo_usuario > p{ 
+#header_conteudo_usuario > p {
   font-weight: 600;
   font-size: 3.1rem;
   color: rgb(157, 72, 255);
@@ -140,9 +137,40 @@ header > a > img {
   text-shadow: -1px 0px 5px rgba(255, 98, 255, 0.842);
   letter-spacing: 2.5px;
 }
-#container_orçamento > form > label { 
-  color: rgb(0, 0, 0);
+#container_orçamento > form label {
+  color: rgb(157, 72, 255);
+  font-weight: bolder;
   font-size: 1.1rem;
+  text-shadow: -1px 0px 2px rgba(255, 98, 255, 0.842);
+}
+#container_orçamento > form {
+  position: relative;
+  top: 4%;
+  display: flex;
+  gap: 2%;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+#container_conjunto > label {
+  border: 2px solid rgb(152, 0, 190);
+  border-radius: 10px;
+  background-color: rgba(252, 235, 255, 0.582);
+}
+
+#container_conjunto > input[type="checkbox"] {
+  display: none;
+}
+select {
+  border-radius: 10px;
+  background-color: rgb(177, 77, 243);
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(65, 0, 243);
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
+  font-weight: 600;
+}
+select optgroup {
+  background-color: rgb(90, 14, 141);
 }
 main {
   top: 50%;
