--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -124,17 +124,17 @@ header > a > img {
 }
 
 #header_conteudo_usuario {
-  background-color: rgb(154, 0, 243);
+  background-color: rgb(116, 41, 202);
   width: 100%;
   height: 10%;
 }
 #header_conteudo_usuario > p {
-  font-weight: 600;
+  font-weight: bolder;
   font-size: 3.1rem;
-  color: rgb(157, 72, 255);
+  color: rgb(115, 44, 196);
   font-family: "fanky", Arial, Helvetica, sans-serif;
   background-color: rgb(221, 191, 255);
-  text-shadow: -1px 0px 5px rgba(255, 98, 255, 0.842);
+  text-shadow: -2px 2px 2px rgba(255, 98, 255, 0.842);
   letter-spacing: 2.5px;
 }
 #container_orçamento > form  label {
@@ -150,7 +150,8 @@ header > a > img {
   width: 100%;
 }
 #container_conjunto { 
-  color: rgb(157, 72, 255);
+  cursor: pointer;
+  color: rgb(115, 44, 196);
   font-weight: 700;
   border: 2px solid rgb(152, 0, 190);
   border-radius: 8px;
@@ -161,8 +162,11 @@ header > a > img {
   left: 50%;
   transform: translate(-50%);
 }
+#container_conjunto label { 
+  cursor: pointer;
+} 
 #container_selecionar_tipo_vestimenta { 
-  color: rgb(157, 72, 255);
+  color: rgb(115, 44, 196);
   font-weight: 600;
   border: 2px solid rgb(152, 0, 190);
   border-radius: 2px;
@@ -180,17 +184,23 @@ header > a > img {
 }
 select {
   border-radius: 10px;
-  background-color: rgb(177, 77, 243);
+  background-color: rgb(116, 41, 202);
   color: rgb(255, 255, 255);
-  border: 1px solid rgb(65, 0, 243);
   text-shadow: 0px 0px 2px rgb(0, 0, 0);
   font-weight: 600;
+  cursor: pointer;
+
+}
+select:focus { 
+  background-color: rgb(93, 26, 170);
+  scale: 98%;
+  border: 1px solid rgb(65, 0, 243);
 }
 select optgroup {
   background-color: rgb(90, 14, 141);
 }
 #container_tamanho_orcamento { 
-  font-weight: 600;
+  font-weight: 800;
   border: 2px solid rgb(152, 0, 190);
   border-radius: 5px;
   background-color: rgba(252, 235, 255, 0.582);
@@ -200,7 +210,7 @@ select optgroup {
   height: 8%;
   left: 50%;
   transform: translate(-50%);
-  
+
 }
 #container_tamanho_orcamento > input[type="radio"] { 
   display: none;
@@ -213,19 +223,18 @@ select optgroup {
 }
 .label_tamanho_orcamento {
   display: inline;
-  border: 2px solid rgba(255, 255, 255, 0.671);
-  background-color: rgb(177, 77, 243);
-  color: rgb(255, 255, 255);
+  border: 2px solid rgba(255, 195, 247, 0.671);
+  background-color: rgb(115, 44, 196);;
+  color: rgb(239, 230, 240);
   cursor: pointer;
   margin-right: 9px;
   font-size: 1rem;
   border-radius: 3px;
   transition-timing-function: ease;
-
-  font-weight: 300;
+  font-weight: 400;
 }
 #container_tamanho_orcamento > input[type="radio"]:checked +label { 
-  font-size: 0.99rem;
+  font-size: 0.95rem;
   box-shadow: 0px 0px 5px rgb(115, 0, 138);
   font-weight: 600;
 }
@@ -233,6 +242,53 @@ select optgroup {
   font-weight: 600;
   box-shadow: 0px 0px 2px rgba(31, 0, 46, 0.637);
   transition-property: box-shadow;
+}
+#container_cores_orçamento { 
+  font-weight: 600;
+  border: 2px solid rgb(152, 0, 190);
+  border-radius: 5px;
+  background-color: rgba(252, 235, 255, 0.582);
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  width: 60%;
+  height: 8%;
+  left: 50%;
+  transform: translate(-50%);
+  color: rgb(115, 44, 196);
+}
+#container_cores_orçamento input  { 
+  position: relative;
+  top: 50%;
+  transform: translate(0%, -50%);
+}
+textarea { 
+  color: rgb(115, 44, 196);
+  font-weight: 700;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  border: 2px solid rgb(152, 0, 190);
+  background-color: rgba(252, 235, 255, 0.582);
+  text-shadow: -1px 1px 1px rgba(255, 98, 255, 0.45);
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  resize: none;
+}
+#container_orçamento  input[type="submit"] { 
+  left: 50%;
+  position: relative;
+  transform: translate(-50%);
+  width: 8%;
+  font-weight: 600;
+  font-size: 1.05rem;
+  border-radius: 10px;
+  background-color: rgb(115, 44, 196);
+  color: white;
+  border: 2px solid rgb(79, 3, 88);
+}
+textarea:focus{ 
+  cursor: text;
+  outline: 0.1px solid rgb(112, 2, 139);
 }
 main {
   top: 50%;
