--- a/Estilos/quemsomos.css
+++ b/Estilos/quemsomos.css
@@ -1,34 +1,55 @@
-div#foto_home {
+body { 
+  overflow: auto;
+}
+div.card_home {
   position: relative;
-  background-color: blue;
-  width: 50%;
-  height: 40%;
-  transform: translate(-50%, -50%);
-  top: 25%;
-  left: 50%;
-  box-shadow: 0px 0px 8px rgb(255, 255, 255);
+  width: 280px;
+  height: 280px;
+  margin-left: 50px;
+  box-shadow: 0px 0px 3px rgba(255, 255, 255, 0.63);
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-size: cover;
+  flex-shrink: 0;
+  scale: 130%;
 }
-#artistas { 
+#container_cards { 
   position: relative;
-  top: 32%;
-  border-radius: 20px;
-  background-color: rgba(0, 4, 255, 0.438);
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+  top: 5%;
+  gap: 2%;
+  left: 50%;
+  transform: translate(-50%);
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 37%;
 }
-a#levarartistas { 
-  position: relative;
-  top: 10%;
+#container_card_logo { 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
 }
-#artistas > h2 {
-  margin: 10px 0px 0px 0px;
-  font-size: clamp(2.5rem, 2vw, 2rem);
-  letter-spacing: 1.02rem;
-  font-family: arial;
-  font-variant: small-caps;
-  font-weight: 700;
-  text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.8);
+#container_ODS { 
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin-right: 50px;
+}
+#container_ODS > div.card_home { 
+  scale: 112%;
+}
+p { 
+  text-indent: 10px;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 500;
+  text-shadow: -1px 0px 2px black;
+  font-size: 1.9rem;
+  margin-left: 50px;
 }
